Fix logo font size on small devises

--- a/src/css/mobile-devices.css
+++ b/src/css/mobile-devices.css
@@ -3,6 +3,10 @@
     margin-top: 1rem;
   }
 
+  .logo {
+    font-size: 1.5rem;
+  }
+
   .landing-banner,
   .feature-content {
     flex-direction: column;
